test/bad/classes/super01.px

class A def
    func f() def
        super()
